Adicionando os metodos do controller
