# src/main/java/com/project/storage/controller/ProductController.java
@@ -1,18 +1,16 @@
 package com.project.storage.controller;
 
-import com.project.storage.datasource.products.model.ProductsData;
+import com.project.storage.datasource.products.records.ProductsDetails;
+import com.project.storage.datasource.products.records.ProductsRegister;
 import com.project.storage.datasource.products.model.ProductsDataSource;
 import com.project.storage.service.ProductService;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.ResponseEntity;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.util.UriComponentsBuilder;
 
 import java.util.List;
-import java.util.Objects;
 
 @RestController
 @RequestMapping("products")
@@ -23,7 +21,7 @@ public class ProductController {
 
     @PostMapping
     @Transactional
-    public ResponseEntity<Void> createProduct(@RequestBody @Valid ProductsData product) {
+    public ResponseEntity<Void> createProduct(@RequestBody @Valid ProductsRegister product) {
        productService.createProduct(product);
        return ResponseEntity.noContent().build();
     }
@@ -33,16 +31,23 @@ public class ProductController {
         return ResponseEntity.ok(productService.listarProdutos());
     }
 
+    @PutMapping
+    @Transactional
+    public ResponseEntity updateProduct(@RequestBody @Valid ProductsRegister data){
+        ProductsDataSource product = productService.buscarPorId(data.id());
+
+        product.atualizarInformacoes(data);
+
+        return ResponseEntity.ok(new ProductsDetails(product));
+    }
+
     @GetMapping("/{id}")
     public ResponseEntity<Object> findById(@PathVariable Integer id){
         return ResponseEntity.ok(productService.buscarPorId(id));
     }
 
-    @PutMapping("/{id}")
+    @DeleteMapping("/{id}")
     @Transactional
-    public ResponseEntity<Void> updateProduct(@RequestBody @Valid ProductsData data){
-        var product = productService.buscarPorId(data.id());
-
-    }
+    public ResponseEntity
 
 }
