# src/main/java/com/project/storage/datasource/products/model/ProductsDataSource.java
@@ -1,10 +1,8 @@
 package com.project.storage.datasource.products.model;
 
-import com.project.storage.datasource.storage.model.StorageDataSource;
+import com.project.storage.datasource.products.records.ProductsRegister;
 import jakarta.persistence.*;
 import lombok.*;
-
-import java.util.List;
 
 @Entity
 @Table(name = "products")
@@ -29,12 +27,30 @@ public class ProductsDataSource {
 
     private Integer fipe;
 
-    public ProductsDataSource(ProductsData data) {
+    public ProductsDataSource(ProductsRegister data) {
         this.brand = data.brand();
         this.model = data.model();
         this.yearModel = data.yearModel();
         this.color = data.color();
         this.fipe = data.fipe();
+    }
+
+    public void atualizarInformacoes(ProductsRegister productsRegister){
+        if (productsRegister.brand() != null) {
+            this.brand = productsRegister.brand();
+        }
+        if (productsRegister.model() != null) {
+            this.model = productsRegister.model();
+        }
+        if (productsRegister.yearModel() != null) {
+            this.yearModel = productsRegister.yearModel();
+        }
+        if (productsRegister.color() != null){
+            this.color = productsRegister.color();
+        }
+        if (productsRegister.fipe() != null){
+            this.fipe = productsRegister.fipe();
+        }
     }
 
 }
